# layacognitiveos

./: COMMAND.md  LICENSE  Makefile  README.md  TODO.md  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  symbols.md
data/act/: evt-1755402781184792000-3fd5c3.json  evt-1755402782182540000-83cb61.json  evt-1755402783183803000-bc7391.json  evt-1755402784182720000-ef34a8.json  evt-1755402785183035000-7e1f85.json  evt-1755402786183023000-c2a7c8.json  evt-1755402787183443000-3e8c6e.json  evt-1755402788183777000-18052b.json  evt-1755402789183653000-f9f2ae.json  evt-1755402790183613000-b0fc65.json  evt-1755402791183595000-3af7eb.json  evt-1755402792184248000-4ab0c6.json  evt-1755402793184100000-e25226.json  evt-1755402794183553000-dd9f73.json  evt-1755402795184254000-b4982f.json  evt-1755402796183410000-dad35d.json  evt-1755402797183797000-3b4c58.json  evt-1755402798182666000-0ddc62.json
docs/: ARCHITECTURE.md  ARCHITECTURE_OVERVIEW.md  METRICS_PROD.md  roadmap.md
scripts/: demo_bootstrap.py  demo_cam.py  demo_motion.py  demo_s0_to_s6.py  global_clock_pipeline_4states.py  real_cam.py
tests/: conftest.py  test_backpressure.py  test_bus_flow.py  test_camera_to_bus.py  test_fault_tolerance.py  test_graceful_shutdown.py  test_latency_metrics.py  test_metrics_dump.py  test_metrics_exporter_smoke.py  test_motion_pipeline.py  test_orchestra_min.py  test_perf_basics.py  test_pipeline_min.py  test_pipeline_motion_demo.py  test_pipeline_s13_detection.py  test_semantic_memory.py  test_storage_roundtrip.py  test_ws_roundtrip.py
tools/: MERGED.md  MERGE_SOURCE.md  SYMBOLS_SOURCE.md  files.yaml  files_all.yaml  gen_files_yaml.sh  merge_sources.py  merge_sources_md.sh  summarize_symbols.py  summarize_symbols.sh  tree_map.sh
(+27 files in other folders)
